@@ -5,21 +5,19 @@ TO DO
  - get rid of final blank page of user's guide
 
 + sometime in the future
+ - only exit delegates at the top level (eg <?php "<?xml ...?>" ?> in PHP)
  - improve handling of __char__
  - print() in BeanShell
  - check beanshell import stuff
  - magic caret code a bit annoying
  - fix dragStart handling in DockableWindowContainer.TabbedPane
- - better reverse search from search bar
  - wing comment with rect sel active puts comment start/end at the
    beginning/end of each selected chunk
  - can mini io progress, io progress command
  - display io progress automatically after > 1 sec I/O
- - find next/prev occurrence commands in core, instead of macros
  - reverse regexp search
  - C+i in shortcuts editor
  - expand-fold doesn't expand narrowed regions
- - macro performance sucks
  - if a plugin is removed and put in a new dir, it is shown in both the
    update and install lists
  - zlib decompression errors in plugin manager
@@ -46,9 +44,15 @@ TO DO
  - eliminate virtual line map with 'virtualLine' fields in LineInfo
    and binary search in virtualToPhysical()
  - escape in 'add abbrev' dialog
- - search in selection option; find-next disabled, hypersearch, replace-all
-   ok, replace button does same thing???
  - option for auto wrap around in search
  - display all plugin errors, batched in one window on startup
- - move plugin manager into the core?
  - 'new view' creates incorrectly sized views due to Java bugs
+ - regexps in XMode
+ - improved rectangular selections
+
++ minor cleanups:
+ - plugin directory should be named 'plugins', not 'jars'
+ - site-props directory should be named 'properties'
+ - move modes into the JAR?
+ - move latest version plugin into the core
+ - move plugin manager into the core
