@@ -109,14 +109,14 @@ void prefixSuffixDialog()
     suffixField.addActionListener(this);
 
 <anchor id="set-visible">    // locate the dialog in the center of the
-    // editing pane and activates (see <xref linkend=
+    // editing pane and make it visible (see <xref linkend=
 "explain-set-visible">)
     dialog.pack();
     dialog.setLocationRelativeTo(view);
     dialog.setVisible(true);
 
 <anchor id="action-listener">    // this method will be called when a button is clicked
-    // or when ENTER or ESCAPE is pressed (see <xref linkend=
+    // or when ENTER is pressed (see <xref linkend=
 "explain-action-listener">)
     void actionPerformed(e)
     {
@@ -128,7 +128,7 @@ void prefixSuffixDialog()
     }
 
 <anchor id="process-text">    // this is where the work gets done to insert
-    // the prefix and suffix  (see <xref linkend=
+    // the prefix and suffix (see <xref linkend=
 "explain-process-text">)
     void processText()
     {
@@ -160,7 +160,7 @@ void prefixSuffixDialog()
 }
 
 <anchor id="main">// this single line of code is the script's main routine
-// it calls the methods and exits  (see <xref linkend=
+// (see <xref linkend=
 "explain-main">)
 prefixSuffixDialog();
 
@@ -172,12 +172,17 @@ prefixSuffixDialog();
 
 <sect2 id="explain-imports"><title>Import Statements</>
 
+<informalexample><programlisting>// import statements
+import javax.swing.*;
+import javax.swing.border.*;</></informalexample>
+
 <para>These statements make the specified class names visible to the
-BeanShell interpreter without specifying the full <glossterm>classpath</glossterm>. As
+BeanShell interpreter without specifying the <glossterm>fully
+qualified class name</glossterm>. As
 we mentioned previously (see <xref linkend="first-example">),
 jEdit's implementation of BeanShell causes a number of classes to
 be automatically imported. Those classes that are not
-automatically imported must be named by a full qualified classpath or be the subject of an
+automatically imported must be named by a full qualified name or be the subject of an
 <function>import</function> statement. There are two types of situations
 that will call for <function>import</function> statements.</para>
 
@@ -193,7 +198,7 @@ the <classname>javax.swing</classname> and <classname>javax.swing.border</classn
 packages.</para>
 
 <para>The other type of <function>import</function> statement would cover
-classes defined in one of jEdit's plugin applications. We do not
+classes defined in one of jEdit's plugins. We do not
 use any such classes in this macro.</para>
 
 <!-- <para>We do need one more import statement for a jEdit class:</para>
@@ -204,6 +209,13 @@ substitute for Java's <classname>JTextField</classname>.</para> -->
 
 <sect2 id="explain-create-dialog"><title>Create the Dialog</>
 
+<informalexample><programlisting>// create dialog object
+title = &quot;Add prefix and suffix to selected lines&quot;;
+dialog = new JDialog(view, title, false);
+content = new JPanel(new BorderLayout());
+content.setBorder(new EmptyBorder(5, 10, 10, 10));
+content.setPreferredSize(new Dimension(320, 160));
+dialog.setContentPane(content);</></informalexample>
 
 <para>To get input for the macro, we need a dialog that permits
 input of the prefix and suffix string, an <guilabel>OK</guilabel> button to
@@ -261,6 +273,17 @@ member components. We have taken the first step by creating a
 <sect2 id="explain-fields-panel"><title>
 Create the Text Fields</>
 
+<informalexample><programlisting>// add the text fields
+fieldPanel = new JPanel(new GridLayout(4, 1, 0, 5));
+prefixField = new HistoryTextField(&quot;macro.add-prefix&quot;);
+prefixLabel = new JLabel(&quot;Prefix to add:&quot;);
+suffixField = new HistoryTextField(&quot;macro.add-suffix&quot;);
+suffixLabel = new JLabel(&quot;Suffix to add:&quot;);
+fieldPanel.add(prefixLabel);
+fieldPanel.add(prefixField);
+fieldPanel.add(suffixLabel);
+fieldPanel.add(suffixField);
+content.add(fieldPanel, &quot;Center&quot;);</></informalexample>
 
 <para>Next we shall create a smaller panel containing two fields for
 entering the prefix and suffix text and two labels identfying the
@@ -305,6 +328,16 @@ occupy the "Center" section of the content pane.</para>
 <sect2 id="explain-button-panel"><title>
 Create the Buttons</>
 
+<informalexample><programlisting>// add the buttons
+buttonPanel = new JPanel(new BorderLayout(0, 0));
+buttonPanel.setBorder(new EmptyBorder(15, 50, 0, 50));
+ok = new JButton(&quot;OK&quot;);
+cancel = new JButton(&quot;Cancel&quot;);
+ok.setPreferredSize(cancel.getPreferredSize());
+dialog.getRootPane().setDefaultButton(ok);
+buttonPanel.add(ok, &quot;West&quot;);
+buttonPanel.add(cancel, &quot;East&quot;);
+content.add(buttonPanel, &quot;South&quot;);</></informalexample>
 
 <para>Creating the buttons repeats the pattern we used in creating
 the text fields. First, we create a new, nested panel with a
@@ -324,9 +357,15 @@ dialog's content pane.</para>
 <sect2 id="explain-add-listeners">
 <title>Register the Action Listeners</>
 
+<informalexample><programlisting>// register this method as an ActionListener for
+// the buttons and text fields
+ok.addActionListener(this);
+cancel.addActionListener(this);
+prefixField.addActionListener(this);
+suffixField.addActionListener(this);</></informalexample>
 
 <para>In order to specify the action to be taken upon clicking a
-button or pressing the <keysym>ENTER</keysym> key, we must register
+button or pressing the <keycap>Enter</keycap> key, we must register
 an <classname>ActionListener</classname> for each of the four active
 components of the dialog - the two <classname>HistoryTextField</classname>
 components and the two buttons. In Java, an
@@ -358,6 +397,11 @@ interface. We will do that shortly.</para>
 <sect2 id="explain-set-visible">
 <title>Make the Dialog Visible</>
 
+<informalexample><programlisting>// locate the dialog in the center of the
+// editing pane and make it visible
+dialog.pack();
+dialog.setLocationRelativeTo(view);
+dialog.setVisible(true);</></informalexample>
 
 <para>Here we do three things. First, we activate all the layout
 routines we have established by calling the <function>pack</function>
@@ -376,6 +420,16 @@ balance of the script deals with these two requirements.</para>
 <sect2 id="explain-action-listener">
 <title>The Action Listener</>
 
+<informalexample><programlisting>// this method will be called when a button is clicked
+// or when ENTER is pressed
+void actionPerformed(e)
+{
+    if(e.getSource() != cancel)
+    {
+        processText();
+    }
+    dialog.dispose();
+}</></informalexample>
 
 <para>The method <function>actionPerformed()</function> nested inside
 <function>prefixSuffixDialog()</function> implements the implicit
@@ -391,6 +445,18 @@ and suffix text. Then the dialog is closed by calling its
 <sect2 id="explain-process-text">
 <title>Get the User's Input</>
 
+<informalexample><programlisting>// this is where the work gets done to insert
+// the prefix and suffix
+void processText()
+{
+    prefix = prefixField.getText();
+    suffix = suffixField.getText();
+    if(prefix.length() == 0 &amp;&amp; suffix.length() == 0)
+        return;
+    if(prefix.length() != 0)
+        prefixField.addCurrentToHistory();
+    if(suffix.length() != 0)
+        suffixField.addCurrentToHistory();</programlisting></informalexample>
 
 <para>
 The method <function>processText()</function> does the work of our
@@ -405,6 +471,21 @@ history list by calling <function>addCurrentToHistory()</function>.
 <sect2 id="explain-jedit-calls">
 <title>Call jEdit Methods to Manipulate Text</>
 
+<informalexample><programlisting>    // text manipulation begins here using calls
+    // to jEdit methods
+    end = textArea.getSelectionEndLine() + 1;
+    for(line = textArea.getSelectionStartLine();
+        line &lt; end; ++line)
+    {
+        offsetBOL = textArea.getLineStartOffset(line);
+        textArea.setCaretPosition(offsetBOL);
+        textArea.goToStartOfWhiteSpace(false);
+        textArea.goToEndOfWhiteSpace(true);
+        text = textArea.getSelectedText();
+        if(text == null) text = &quot;&quot;;
+        textArea.setSelectedText(prefix + text + suffix);
+    }
+}</></informalexample>
 
 <para>The text manipulation routine loops through each selected line
 in the text buffer. We get the loop parameters by calling
@@ -417,7 +498,7 @@ lines in the loop's range, we apply the following routine:</para>
 as a zero-based index from the start of the buffer) by calling
 <function>textArea.getLineStartOffset(line)</function>;</para></listitem>
 
-<listitem><para>Set the editing caret to that position by calling
+<listitem><para>Move the caret to that position by calling
 <function>textArea.setCaretPosition()</function>;</para></listitem>
 
 <listitem><para>Find the first and last non-whitespace characters on the line
@@ -433,13 +514,12 @@ text is selected, then call
 the text between the beginning and ending whitespace is
 selected.</para></listitem>
 
-<listitem><para>Retrieve the selected text by assigned the return value of
-<function>textArea.getSelectedText()</function> to a new variable
+<listitem><para>Retrieve the selected text by storing the return value of
+<function>textArea.getSelectedText()</function> in a new variable
 <function>text</function>.</para>
 <para>If the line is empty, <function>getSelectedText()</function> will return
-<constant>null</constant>. In that circumstance, we assign an empty
-string to <varname>text</varname> so that we can take our final
-step.</para></listitem>
+<constant>null</constant>. In that case, we assign an empty
+string to <varname>text</varname>.</para></listitem>
 
 <listitem><para>Change the selected text to <varname>prefix + text +
 suffix</varname> by calling <function>textArea.setSelectedText()</function>.
@@ -452,6 +532,9 @@ characters.</para></listitem>
 <sect2 id="explain-main">
 <title>The Main Routine</>
 
+<informalexample><programlisting>// this single line of code is the script's main routine
+prefixSuffixDialog();</>
+</informalexample>
 
 <para>The call to <function>prefixSuffixDialog()</function>is the only line
 in the macro that is not inside an enclosing block. BeanShell
